--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.container__hero-title {
+.hero__title {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -20,7 +20,7 @@
     text-align: center;
     margin: 0 auto;
 }
-.hero-btn {
+.hero__btn {
     font-family: inherit;
     font-weight: bold;
     font-size: 16px;
