--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,10 +17,12 @@
 
 @import "./layout/header";
 @import "./layout/hero";
+@import "./layout/features";
 @import "./layout/about";
 @import "./layout/team";
 @import "./layout/clients";
 @import "./layout/footer";
 
+@import "./layout/filters";
 @import "./layout/project-portfolio";
 
