--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
 }
 
 .container {
@@ -90,7 +91,7 @@ img {
   margin-left: auto;
 }
 
-.contact-list__item-mail {
+.contact-list__item:nth-child(1) {
   margin-right: 40px;
 }
 
@@ -99,7 +100,7 @@ img {
   margin-right: 10px;
 }
 
-.contact-list__email-link, .contact-list__tel-link {
+.contact-list__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -110,35 +111,23 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-list__email-link:hover, .contact-list__email-link:focus, .contact-list__email-link:hover, .contact-list__email-link:focus, .contact-list__tel-link:hover, .contact-list__tel-link:focus, .contact-list__tel-link:hover, .contact-list__tel-link:focus {
+.contact-list__link:hover, .contact-list__link:focus, .contact-list__link:hover, .contact-list__link:focus {
   color: var(--accept-color);
 }
 
-.contact-list__email-link:hover .contact-list__icon,
-.contact-list__email-link:hover .contact-list__icon,
-.contact-list__email-link:hover .contact-list__icon,
-.contact-list__email-link:hover .contact-list__icon, .contact-list__email-link:focus .contact-list__icon,
-.contact-list__email-link:focus .contact-list__icon,
-.contact-list__email-link:focus .contact-list__icon,
-.contact-list__email-link:focus .contact-list__icon, .contact-list__email-link:hover .contact-list__icon,
-.contact-list__email-link:hover .contact-list__icon,
-.contact-list__email-link:hover .contact-list__icon,
-.contact-list__email-link:hover .contact-list__icon, .contact-list__email-link:focus .contact-list__icon,
-.contact-list__email-link:focus .contact-list__icon,
-.contact-list__email-link:focus .contact-list__icon,
-.contact-list__email-link:focus .contact-list__icon, .contact-list__tel-link:hover .contact-list__icon,
-.contact-list__tel-link:hover .contact-list__icon,
-.contact-list__tel-link:hover .contact-list__icon,
-.contact-list__tel-link:hover .contact-list__icon, .contact-list__tel-link:focus .contact-list__icon,
-.contact-list__tel-link:focus .contact-list__icon,
-.contact-list__tel-link:focus .contact-list__icon,
-.contact-list__tel-link:focus .contact-list__icon, .contact-list__tel-link:hover .contact-list__icon,
-.contact-list__tel-link:hover .contact-list__icon,
-.contact-list__tel-link:hover .contact-list__icon,
-.contact-list__tel-link:hover .contact-list__icon, .contact-list__tel-link:focus .contact-list__icon,
-.contact-list__tel-link:focus .contact-list__icon,
-.contact-list__tel-link:focus .contact-list__icon,
-.contact-list__tel-link:focus .contact-list__icon {
+.contact-list__link:hover .contact-list__icon,
+.contact-list__link:hover .contact-list__icon,
+.contact-list__link:hover .contact-list__icon,
+.contact-list__link:hover .contact-list__icon, .contact-list__link:focus .contact-list__icon,
+.contact-list__link:focus .contact-list__icon,
+.contact-list__link:focus .contact-list__icon,
+.contact-list__link:focus .contact-list__icon, .contact-list__link:hover .contact-list__icon,
+.contact-list__link:hover .contact-list__icon,
+.contact-list__link:hover .contact-list__icon,
+.contact-list__link:hover .contact-list__icon, .contact-list__link:focus .contact-list__icon,
+.contact-list__link:focus .contact-list__icon,
+.contact-list__link:focus .contact-list__icon,
+.contact-list__link:focus .contact-list__icon {
   fill: currentColor;
 }
 
@@ -190,16 +179,16 @@ img {
   letter-spacing: 0.03em;
 }
 
-.logo_light-theme {
+.logo-light {
   margin-right: 95px;
   color: var(--light-theme-text);
 }
 
-.logo_dark-theme {
+.logo-dark {
   color: var(--dark-theme-text);
 }
 
-.logo__accent {
+.logo-accent {
   color: var(--accept-color);
 }
 
@@ -467,7 +456,7 @@ img {
   background-size: cover;
 }
 
-.container__hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -479,7 +468,7 @@ img {
   margin: 0 auto;
 }
 
-.hero-btn {
+.hero__btn {
   font-family: inherit;
   font-weight: bold;
   font-size: 16px;
@@ -496,11 +485,11 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover, .hero-btn:focus {
+.hero__btn:hover, .hero__btn:focus {
   background-color: var(--highlight-color);
 }
 
-.about-quality-list__title {
+.features-list__title {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -509,7 +498,7 @@ img {
   margin-bottom: 15px;
 }
 
-.about-quality-list__description {
+.features-list__description {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -517,12 +506,11 @@ img {
   color: var(--secondary-text-color);
 }
 
-.about-quality-list {
+.features-list {
   display: flex;
-  margin-left: -30px;
 }
 
-.about-quality-list__icon-wrapper {
+.features-list__icon-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -532,35 +520,35 @@ img {
   margin-bottom: 30px;
 }
 
-.about-quality-list__item {
+.features-list__item:not(:first-child) {
   margin-left: 30px;
+}
+
+.about {
+  padding-bottom: 94px;
 }
 
 .about-img-section {
   padding-top: 0px;
 }
 
-.about-img-list {
+.about-list {
   display: flex;
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.about-img-list__item {
+.about-list__item {
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
 
-.about-img-list__content-wrapper {
+.about-list__wrapper {
   position: relative;
 }
 
-.about-img-list__img {
-  max-width: 100%;
-}
-
-.about-img-list__content {
+.about-list__content {
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -593,12 +581,12 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__img-content {
+.team-list__box {
   text-align: center;
   padding: 30px 32px;
 }
 
-.team-list__img-title {
+.team-list__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -606,7 +594,7 @@ img {
   margin-bottom: 6px;
 }
 
-.team-list__img-description {
+.team-list__description {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.19;
@@ -617,10 +605,6 @@ img {
 .team-list {
   display: flex;
   margin-left: -30px;
-}
-
-.team-list__img {
-  max-width: 270px;
 }
 
 .clients {
@@ -736,7 +720,7 @@ img {
   margin-bottom: 20px;
 }
 
-.footer-form__input_mail {
+.footer-form__input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -746,7 +730,7 @@ img {
   margin-right: 12px;
 }
 
-.footer-form__input_mail::placeholder {
+.footer-form__input::placeholder {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -798,17 +782,17 @@ img {
   transform: translateY(-50%);
 }
 
-.projects-type-list {
+.filters-list {
   display: flex;
   justify-content: center;
   margin-bottom: 54px;
 }
 
-.projects-type-list__item {
+.filters-list__item {
   margin-left: 8px;
 }
 
-.projects-type-btn {
+.filters-btn {
   font-family: inherit;
   background-color: var(--background-btn);
   font-weight: 500;
@@ -822,7 +806,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-type-btn:hover, .projects-type-btn:focus {
+.filters-btn:hover, .filters-btn:focus {
   background-color: var(--accept-color);
   color: var(--dark-theme-text);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -863,7 +847,7 @@ img {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project-list__img_content {
+.project-list__content {
   border-left: 1px solid var(--border-color);
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
