--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,54 +1,23 @@
-.about-quality-list__title {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-}
-.about-quality-list__description {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-}
-.about-quality-list {
-    display: flex;
-    margin-left: -30px;
-}
-.about-quality-list__icon-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 270px;
-    height: 120px;
-    background-color: var(--background-btn);
-    margin-bottom: 30px;
-}
-.about-quality-list__item {
-    margin-left: 30px;
+.about {
+    padding-bottom: 94px;
 }
 .about-img-section {
     padding-top: 0px;
 }
-.about-img-list {
+.about-list {
     display: flex;
     margin-left: -30px;
     margin-top: -30px;
 }
-.about-img-list__item {
+.about-list__item {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
     margin-top: 30px;
 }
-.about-img-list__content-wrapper {
+.about-list__wrapper {
     position: relative;
 }
-.about-img-list__img {
-    max-width: 100%;
-}
-.about-img-list__content {
+.about-list__content {
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
