--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -57,7 +57,7 @@
     color: #ffffff;
     margin-bottom: 20px;
 }
-.footer-form__input_mail {
+.footer-form__input {
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
