--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -11,18 +11,18 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
-.team-list__img-content {
+.team-list__box {
     text-align: center;
     padding: 30px 32px;
 }
-.team-list__img-title {
+.team-list__title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     margin-bottom: 6px;
 }
-.team-list__img-description {
+.team-list__description {
     font-weight: normal;
     font-size: 16px;
     line-height: 1.19;
@@ -32,7 +32,4 @@
 .team-list {
     display: flex;
     margin-left: -30px;
-}
-.team-list__img {
-    max-width: 270px;
 }
